--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                           <br>
                           <br>
                           <img src="img/portfolio/reverberation.jpg" class="img-responsive img-centered" alt="">
-                          <p>Get knowledge about how /p>
+                          <p>Control the reverberation of a given space by defining the proper amount of absorptive materials.</p>
                           <br>
                           <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                       </div>
@@ -479,7 +479,7 @@
                           <br>
                           <br>
                           <img src="img/portfolio/apps.png" class="img-responsive img-centered" alt="">
-                          <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                          <p>The best smartphone apps selected for you. With tech details and step by step instructions about usage.</p>
                           <br>
                           <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                       </div>
@@ -504,7 +504,7 @@
                           <br>
                           <br>
                           <img src="img/portfolio/materials2.jpg" class="img-responsive img-centered" alt="">
-                          <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                          <p>Many materials can be used to improve acoustic insulation or room acoustics. Learn about their properties and how and when use them.</p>
                           <br>
                           <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                       </div>
@@ -529,7 +529,7 @@
                           <br>
                           <br>
                           <img src="img/portfolio/best_practices.jpeg" class="img-responsive img-centered" alt="">
-                          <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                          <p>The experience from years working on hard acoustic projects distilled in a must "tip & tricks" approach.</p>
                           <br>
                           <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                       </div>
