--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                             <br>
                             <br>
                             <img src="img/portfolio/impact_noise.jpg" class="img-responsive img-centered" alt="">
-                            <p>Be able to design specific solutions for different impact noise insulation requirements. Get noise reduction in 1/3 octave bands.</p>
+                            <p>Be able to design specific solutions for different impact noise sources and get noise reduction expected levels.</p>
                             <br>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
